# flicks

Flicks/Flicks/: APIService.swift  AppStyle.swift  AuthenticationManager.swift  Configuration.swift  ContentView.swift  DateHelpers.swift  Depth3DDemoView.swift  Flicks.entitlements  FlicksApp.swift  ForYouView.swift  GroupView.swift  InteractiveDepthCard.swift  LoginView.swift  MenuButton.swift  MovieCardMiniView.swift  MovieCardView.swift  MovieData.swift  MovieDetailView.swift  Onboarding.swift  OnboardingView.swift  ProfileView.swift  RateMenu.swift  RateTriggerButton.swift  SearchOverlay.swift  SwiftUIView.swift  UIColor+ColorAnalysis.swift  UserState.swift  VerticalMovieCardView.swift  WatchlistButton.swift  WatchlistView.swift
Flicks/Flicks.xcodeproj/: project.pbxproj
Flicks/Flicks/Assets.xcassets/darkknight.jpg.imageset/: Contents.json
Flicks/FlicksTests/: FlicksTests.swift
Flicks/FlicksUITests/: FlicksUITests.swift  FlicksUITestsLaunchTests.swift
landing-page/: index.html  style.css
recc-engine/: .gitignore  api_test.py  app.py  check_epitome_movies.py  clean_script.py  db.py  encoding.py  fetch_diverse_movies.py  find_parasite.py  genre_script.py  init_personas.py  inspect_db.py  keyword_script.py  main.py  migrate_year.py  pyproject.toml  run_server.sh  search.py  test_api_workflow.py  test_data.json  tmdb_api.py  user.py  user_1.json  verify_db_count.py
recc-engine/users/: John Doe.json  Lila_Torzec.json  Shamik Karkhanis.json  Shamik.json  shamik_test.json  user_1.json  user_2.json  user_3.json
(+13 files in other folders)
