[project]
name = "recc-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.4.0",
    "fastapi>=0.128.0",
    "portalocker>=3.2.0",
    "pyjwt[crypto]>=2.11.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.0",
    "uvicorn>=0.40.0",
]
